update image paths

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </div>
-            <div class="cover-image" style="background-image : url('file:///Users/januarysmith/Documents/NewWebsite/images/home/header.jpg')"></div>
+            <div class="cover-image" style="background-image : url('images/home/header.jpg')"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
