--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><span>January Smith</span></a>
+                        <a class="navbar-brand" href="index.html"><span style="font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif; font-size: 18px;">January Smith</span></a>
                     </div>
                     <div class="collapse navbar-collapse" id="navbar-ex-collapse">
                         <ul class="nav navbar-nav navbar-right">
-                            <li class="active">
+                            <li>
                                 <a href="#streetview">Google Street View</a>
                             </li>
                             <li>
                                 <a href="gallery/gallery.html">Gallery</a>
                             </li>
                             <li>
-                                <a href="#">About</a>
+                                <a href="#about">About</a>
                             </li>
                         </ul>
                     </div>
@@ -45,24 +45,24 @@
                     <div class="col-md-12 text-center">
                         <h1 class="text-inverse">Google Virtual Tours</h1>
                         <p class="text-inverse">
-                            <span style="color: rgba(255, 255, 255, 0.701961); font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif; font-size: 18px; line-height: 27px;">Enhance the online presence of your business across Google+, Google Maps,
+                            <span style="font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif; font-size: 18px; line-height: 27px;">Enhance the online presence of your business across Google+, Google Maps,
                                 and Google Search with a 360º virtual tour powered by Street View technology
                                 and designed by a Google Trusted Photographer.</span>
                         </p>
                         <br>
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe src="https://googledrive.com/host/0BxBZVCDcj_ckdTFDMllKRUp3TmM/demo/index.html"
-                            allowfullscreen=""></iframe>
+                            allowfullscreen="" style="border:medium double"></iframe>
                             <br>
                         </div>
                         <br>
-                        <a class="btn btn-lg btn-primary">Find Out More</a>
+                        <a class="btn btn-lg btn-primary" href="#streetview">Find Out More</a>
                     </div>
                 </div>
             </div>
         </div>
         <div class="section">
-            <div class="container">
+            <div class="container" id="streetview">
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="text-center">What is a Google Street View Virtual Tour?</h1>
@@ -70,56 +70,90 @@
                 </div>
             </div>
         </div>
-        <div class="section" id="streetview">
+        <div class="section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
-                        <img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png"
-                        class="img-responsive">
+                    <div class="col-md-9">
+                        <img src="images/home/SeeInside.png" class="img-responsive">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-3">
                         <h1 class="text-primary"></h1>
-                        <h3>A subtitle</h3>
+                        <h3>See Inside</h3>
                         <p></p>
                         <p class="text-faded">It is actually so much more than just a virtual tour...</p>
-                        <p class="text-faded"
-                        style="margin-bottom: 20px; font-size: 16px; line-height: 1.5; color: rgba(255, 255, 255, 0.701961); font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif; text-align: center; background-color: rgb(240, 95, 64);">Your business benefits from an improved online presence across Google+,
+                        <p class="text-faded">Your business benefits from an improved online presence across Google+,
                             Google Maps, Google Search, and even your own website because when customers
-                            find you online they can walk through, explore, and take a closer look
-                            around your business.</p>
-                        <p class="text-faded" style="margin-bottom: 20px; font-size: 16px; line-height: 1.5; color: rgba(255, 255, 255, 0.701961); font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif; text-align: center; background-color: rgb(240, 95, 64);">Photo packages start at around $150 for 3-4 panoramas and take about an
+                            find you online they can click
+                            <b>See Inside&nbsp;</b>to walk through, explore, and take a closer look around
+                            your business.</p>
+                        <p class="text-faded">Photo packages start at around $150 for 3-4 panoramas and take about an
                             hour to shoot.</p>
+                        <div class="col-md-12">
+                            <div class="row">
+                                <h3 class="text-center">Getting Started is Easy...</h3>
+                                <br>
+                                <div class="col-md-4 text-center">
+                                    <i class="fa fa-3x fa-fw fa-calendar"></i>
+                                    <br>Schedule</div>
+                                <div class="col-md-4 text-center">
+                                    <i class="fa fa-3x fa-fw fa-camera"></i>
+                                    <br>Shoot</div>
+                                <div class="col-md-4 text-center">
+                                    <i class="fa fa-3x fa-fw fa-cloud"></i>
+                                    <br>Publish</div>
+                            </div>
+                        </div>
                         <p></p>
                     </div>
                 </div>
             </div>
         </div>
+        <aside>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <a class="btn btn-primary" href="#about">Get Started</a>
+                    </div>
+                </div>
+            </div>
+        </aside>
         <div class="section" id="about">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="text-center text-primary">About</h1>
-                        <p class="text-center">We are a group of skilled individuals.</p>
+                        <hr>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
-                        <img src="http://pingendo.github.io/pingendo-bootstrap/assets/user_placeholder.png"
-                        class="center-block img-circle img-responsive">
-                        <h3 class="text-center">John Doe</h3>
-                        <p class="text-center">Developer</p>
+                    <div class="col-md-6">
+                        <img src="images/home/me.jpg" class="center-block img-responsive img-thumbnail">
+                        <h3 class="text-center">January Smith</h3>
+                        <p class="text-center">Google Trusted Photographer</p>
                     </div>
-                    <div class="col-md-4">
-                        <img src="http://pingendo.github.io/pingendo-bootstrap/assets/user_placeholder.png"
-                        class="center-block img-circle img-responsive">
-                        <h3 class="text-center">John Doe</h3>
-                        <p class="text-center">Developer</p>
+                    <div class="col-md-6">
+                        <p>Google Street View virtual tours is all I do...
+                            <br>
+                            <br>I have been a Google Trusted Photographer for over two years now shooting
+                            high quality panoramic photography across Texas and the Southwest.
+                            <br>
+                            <br>
+                            <br>
+                        </p>
                     </div>
-                    <div class="col-md-4">
-                        <img src="http://pingendo.github.io/pingendo-bootstrap/assets/user_placeholder.png"
-                        class="center-block img-circle img-responsive">
-                        <h3 class="text-center">John Doe</h3>
-                        <p class="text-center">Developer</p>
+                    <div class="row">
+                        <h3 class="text-center">Let's Get In Touch...</h3>
+                        <br>
+                        <div class="col-md-2 text-center">
+                            <i class="fa fa-3x fa-fw fa-phone"></i>
+                            <br>(210) 870-6991</div>
+                        <div class="col-md-2 text-center">
+                            <i class="fa fa-3x fa-fw fa-send-o"></i>
+                            <br>january@januarysmith.com</div>
+                        <div class="col-md-2 text-center">
+                            <i class="fa fa-3x fa-fw fa-envelope-o"></i>
+                            <br>11942 Mission Trace
+                            <br>San Antonio, TX 78230</div>
                     </div>
                 </div>
             </div>
