--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -1,101 +1,40 @@
-<!DOCTYPE html>
-<html>
-    
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-        <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"
-        rel="stylesheet" type="text/css">
-        <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css"
-        rel="stylesheet" type="text/css">
-    </head>
-    
-    <body>
-        <div class="navbar">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="../index.html"><span>January Smith</span></a>
-                </div>
-                <div class="collapse navbar-collapse" id="navbar-ex-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="#">Google Street View</a>
-                        </li>
-                        <li class="active">
-                            <a href="gallery/gallery.html">Gallery</a>
-                        </li>
-                        <li>
-                            <a href="#">About</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+<html><head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
+  </head><body>
+    <div class="navbar">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="../index.html"><span>January Smith</span></a>
         </div>
-        <div class="section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h1 class="text-center">Gallery</h1>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <a><img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive"></a>
-                        <h3>A title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,&nbsp;</p>
-                    </div>
-                    <div class="col-md-4">
-                        <a><img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive"></a>
-                        <h2>A title</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,&nbsp;</p>
-                    </div>
-                    <div class="col-md-4">
-                        <a><img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive"></a>
-                        <h2>A ttile</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,&nbsp;</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <a><img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive"></a>
-                        <h3>A title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,&nbsp;</p>
-                    </div>
-                    <div class="col-md-4">
-                        <a><img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive"></a>
-                        <h3>A title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,&nbsp;</p>
-                    </div>
-                    <div class="col-md-4">
-                        <a><img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive"></a>
-                        <h2>A title</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisici elit,&nbsp;</p>
-                    </div>
-                </div>
-            </div>
+        <div class="collapse navbar-collapse" id="navbar-ex-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="../index.html#streetview">Google Street View</a>
+            </li>
+            <li class="active">
+              <a href="gallery/gallery.html">Gallery</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+          </ul>
         </div>
-        <div id="carousel-example" data-interval="false" class="carousel slide"
-        data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png">
-                    <div class="carousel-caption">
-                        <h2>Title</h2>
-                        <p>Description</p>
-                    </div>
-                </div>
-            </div>
-            <a class="left carousel-control" href="#carousel-example" data-slide="prev"><i class="icon-prev  fa fa-angle-left"></i></a>
-            <a class="right carousel-control" href="#carousel-example" data-slide="next"><i class="icon-next fa fa-angle-right"></i></a>
-        </div>
-    </body>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <iframe src="https://googledrive.com/host/0BxBZVCDcj_ckdTFDMllKRUp3TmM/MyPanos/index.html" width="100%" height="100%"></iframe>
+    </div>
+  
 
-</html>
+</body></html>
