--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -6,35 +6,43 @@
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
   </head><body>
-    <div class="navbar">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="../index.html"><span>January Smith</span></a>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-ex-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="../index.html#streetview">Google Street View</a>
-            </li>
-            <li class="active">
-              <a href="gallery/gallery.html">Gallery</a>
-            </li>
-            <li>
-              <a href="#">About</a>
-            </li>
-          </ul>
+    <div class="cover container-fluid" id="top">
+      <div class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="../index.html#top"><span style="font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif; font-size: 24px;">January Smith</span></a>
+          </div>
+          <div class="collapse navbar-collapse" id="navbar-ex-collapse">
+            <ul class="lead nav navbar-nav navbar-right">
+              <li>
+                <a href="../index.html#streetview">Google Street View</a>
+              </li>
+              <li class="active">
+                <a href="gallery/gallery.html">Gallery</a>
+              </li>
+              <li>
+                <a href="../index.html#about">About</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="container-fluid">
-      <iframe src="https://googledrive.com/host/0BxBZVCDcj_ckdTFDMllKRUp3TmM/MyPanos/index.html" width="100%" height="100%"></iframe>
-    </div>
+      <div class="cover-image" style="background-image : url('../images/home/header.jpg')"></div>
+
+        <div class="col-md-12">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://googledrive.com/host/0BxBZVCDcj_ckdTFDMllKRUp3TmM/demo/myPanos.html" allowfullscreen=""></iframe>
+            <br>
+          </div>
+        </div>
+      </div>
+
   
 
 </body></html>
