--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" href="styles/myBootstrap.css">
     <script>
       jQuery(document).ready(function($) {
-                          $('a[href^="#"]').bind('click.smoothscroll',function (e) {
-                              e.preventDefault();
-                              var target = this.hash,
-                              $target = $(target);
-                      
-                              $('html, body').stop().animate( {
-                                  'scrollTop': $target.offset().top
-                              }, 900, 'swing', function () {
-                                  window.location.hash = target;
+                                  $('a[href^="#"]').bind('click.smoothscroll',function (e) {
+                                      e.preventDefault();
+                                      var target = this.hash,
+                                      $target = $(target);
+                              
+                                      $('html, body').stop().animate( {
+                                          'scrollTop': $target.offset().top
+                                      }, 900, 'swing', function () {
+                                          window.location.hash = target;
+                                      } );
+                                  } );
                               } );
-                          } );
-                      } );
     </script>
   </head><body>
-    <div class="cover">
-      <div class="navbar navbar-inverse">
+    <div class="cover" id="top">
+      <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
@@ -32,17 +32,17 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html"><span style="font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif; font-size: 24px;">January Smith</span></a>
+            <a class="navbar-brand" href="#top"><span style="font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif; font-size: 24px;">January Smith</span></a>
           </div>
           <div class="collapse navbar-collapse" id="navbar-ex-collapse">
             <ul class="lead nav navbar-nav navbar-right">
               <li class="active">
                 <a href="#streetview">Google Street View</a>
               </li>
-              <li class="active">
+              <li>
                 <a href="gallery/gallery.html">Gallery</a>
               </li>
-              <li class="active">
+              <li>
                 <a href="#about">About</a>
               </li>
             </ul>
