link in phone gallery problem

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -470,7 +470,7 @@
         <div class="item active">
           <img src="../images/gallery/advanced.png">
           <div class="carousel-caption">
-            <a href="https://www.google.com/maps/place/Advanced+Smile+Care/@29.5654912,-98.5587029,3a,75y,225h,90t/data=!3m8!1e1!3m6!1sFJ2zWEuz4QoAAAQYaKhd7A!2e0!3e2!6s%2F%2Fgeo0.ggpht.com%2Fcbk%3Fcb_client%3Dmaps_sv.tactile%26output%3Dthumbnail%26thumb%3D2%26panoid%3DFJ2zWEuz4QoAAAQYaKhd7A%26w%3D124%26h%3D75%26yaw%3D225%26pitch%3D0%26thumbfov%3D103%26ll%3D29.565491,-98.558703!7i13312!8i6656!4m2!3m1!1s0x865c60e516cc8a4f:0x1a4eaeab29ccf9be!6m1!1e1"><h2>Advanced Smile Care</h2></a>
+            <a href="https://www.google.com/maps/place/Advanced+Smile+Care/@29.5654912,-98.5587029,3a,75y,225h,90t/data=!3m8!1e1!3m6!1sFJ2zWEuz4QoAAAQYaKhd7A!2e0!3e2!6s%2F%2Fgeo0.ggpht.com%2Fcbk%3Fcb_client%3Dmaps_sv.tactile%26output%3Dthumbnail%26thumb%3D2%26panoid%3DFJ2zWEuz4QoAAAQYaKhd7A%26w%3D124%26h%3D75%26yaw%3D225%26pitch%3D0%26thumbfov%3D103%26ll%3D29.565491,-98.558703!7i13312!8i6656!4m2!3m1!1s0x865c60e516cc8a4f:0x1a4eaeab29ccf9be!6m1!1e1"><h2 class="text-primary">Advanced Smile Care</h2></a>
           </div>
         </div>
         <div class="item">
