--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -482,7 +482,13 @@
         <div class="item">
           <img src="../images/gallery/alamo.png">
         </div>
-      </div>
+         <div class="item">
+          <img src="../images/gallery/anytime.png">
+          <div class="carousel-caption">
+            <a href="https://www.google.com/maps/place/Anytime+Fitness/@31.1191097,-97.8632492,3a,75y,133h,90t/data=!3m8!1e1!3m6!1sY1An91S9jiwAAAQfDZMTTA!2e0!3e2!6s%2F%2Fgeo0.ggpht.com%2Fcbk%3Fcb_client%3Dmaps_sv.tactile%26output%3Dthumbnail%26thumb%3D2%26panoid%3DY1An91S9jiwAAAQfDZMTTA%26w%3D124%26h%3D75%26yaw%3D133%26pitch%3D0%26thumbfov%3D103%26ll%3D31.119110,-97.863249!7i13312!8i6656!4m2!3m1!1s0x865ab3f988b642bb:0x2bb25402fc8b9b8!6m1!1e1"><h2 class="text-primary">Anytime Fitness (Copperas Cove)</h2></a>
+          </div>
+        </div>
+     </div>
       <a class="left carousel-control" href="#carousel" data-slide="prev"><i class="icon-prev  fa fa-angle-left"></i></a>
       <a class="right carousel-control" href="#carousel" data-slide="next"><i class="icon-next fa fa-angle-right"></i></a>
     </div>
