--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <title>January Smith - Google Trusted Photographer</title>
     <script>
       jQuery(document).ready(function($) {
-                                                          $('a[href^="#"]').bind('click.smoothscroll',function (e) {
-                                                              e.preventDefault();
-                                                              var target = this.hash,
-                                                              $target = $(target);
-                                                      
-                                                              $('html, body').stop().animate( {
-                                                                  'scrollTop': $target.offset().top
-                                                              }, 900, 'swing', function () {
-                                                                  window.location.hash = target;
+                                                                  $('a[href^="#"]').bind('click.smoothscroll',function (e) {
+                                                                      e.preventDefault();
+                                                                      var target = this.hash,
+                                                                      $target = $(target);
+                                                              
+                                                                      $('html, body').stop().animate( {
+                                                                          'scrollTop': $target.offset().top
+                                                                      }, 900, 'swing', function () {
+                                                                          window.location.hash = target;
+                                                                      } );
+                                                                  } );
                                                               } );
-                                                          } );
-                                                      } );
     </script>
   </head><body>
     <div class="cover" id="top">
@@ -72,11 +72,9 @@
             <iframe src="https://googledrive.com/host/0BxBZVCDcj_ckdTFDMllKRUp3TmM/demo/index.html" allowfullscreen="" style="border:medium double"></iframe>
             <br>
           </div>
-          <br>
-          <br>
-          <br>
         </div>
         <div class="row text-center">
+          <br>
           <a class="btn btn-lg btn-primary" href="#streetview">Find Out More</a>
           <br>
           <br>
@@ -91,10 +89,6 @@
             <h1 class="text-center">What is a Google Street View Virtual Tour?</h1>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="section">
-      <div class="container">
         <div class="row">
           <div class="col-md-9">
             <img src="images/home/SeeInside.png" class="img-responsive">
@@ -111,27 +105,36 @@
               your business.</p>
             <p class="text-faded">Photo packages start at around $150 for 3-4 panoramas and take about an
               hour to shoot.</p>
-            <div class="col-md-12">
-              <div class="row">
-                <h3 class="text-center">Getting Started is Easy...</h3>
-                <br>
-                <div class="col-md-4 text-center">
-                  <i class="fa fa-3x fa-fw fa-calendar"></i>
-                  <br>Schedule</div>
-                <div class="col-md-4 text-center">
-                  <i class="fa fa-3x fa-fw fa-camera"></i>
-                  <br>Shoot</div>
-                <div class="col-md-4 text-center">
-                  <i class="fa fa-3x fa-fw fa-cloud"></i>
-                  <br>Publish</div>
-              </div>
+            <div class="col-md-12"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            <div class="row">
+              <h3 class="text-center">Getting Started is Easy...</h3>
+              <br>
+              <div class="col-md-4 text-center">
+                <i class="fa fa-3x fa-fw fa-calendar"></i>
+                <br>Schedule</div>
+              <div class="col-md-4 text-center">
+                <i class="fa fa-3x fa-fw fa-camera"></i>
+                <br>Shoot</div>
+              <div class="col-md-4 text-center">
+                <i class="fa fa-3x fa-fw fa-cloud"></i>
+                <br>Publish</div>
             </div>
-            <p></p>
+          </div>
+          <div class="col-md-9">
+            <div class="embed-responsive embed-responsive-16by9">&lt;
+              <iframe src="https://www.youtube.com/embed/9CLYaukFmMw" frameborder="0" allowfullscreen=""></iframe>
+            </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-12 text-center">
+            <br>
             <a class="btn btn-lg btn-primary" href="#about">Get Started</a>
+            <br>
           </div>
         </div>
       </div>
@@ -139,6 +142,9 @@
     <aside>
       <div class="container-fluid">
         <div class="row" style="background-color:black">
+          <br>
+          <br>
+          <br>
           <br>
           <br>
           <br>
