--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                 <img src="images/home/GBV.jpg" class="center-block img-responsive img-rounded">
               </div>
               <div class="col-md-9">
-                <h3 class="text-left text-muted">January Smith</h3>
-                <p class="text-left text-muted">Google Trusted Photographer</p>
+                <h3 class="text-center text-muted">January Smith</h3>
+                <p class="text-center text-muted">Google Trusted Photographer</p>
               </div>
             </div>
           </div>
