Push Courthouse Page with just counties

--- a/courthouse/Texas-Courthouse-Tours.html
+++ b/courthouse/Texas-Courthouse-Tours.html
@@ -43,7 +43,7 @@
               <a href="../index.html#streetview"><span style="font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif; font-size: 18px;">Google Street View</span></a>
             </li>
             <li>
-              <a href="#top"><span style="font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif; font-size: 18px;">Gallery</span></a>
+              <a href="../gallery/gallery.html"><span style="font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif; font-size: 18px;">Gallery</span></a>
             </li>
             <li class="active">
               <a href="#top"><span style="font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif; font-size: 18px;">Courthouse Tours</span></a>
