--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
           <br>
           <div class="jumbotron col-md-12">
             <h2 class="text-center">What is a Google Street View Virtual Tour?</h2>
+            <br>
             <div class="col-md-8">
               <img src="images/home/SeeInside.png" class="img-responsive">
             </div>
@@ -90,7 +91,7 @@
                 <br>Your business benefits from an improved online presence across Google+,
                 Google Maps, Google Search, and even your own website because when customers
                 find you online they can click
-                <b>See Inside</b>to walk through, explore, and take a closer look around
+                <b>See Inside&nbsp;</b>to walk through, explore, and take a closer look around
                 your business from their desktop, laptop, tablet or mobile device.
                 <br>
                 <br>Photo packages start at around $150 for 3-4 panoramas and take about an
@@ -156,11 +157,14 @@
               <br>
             </div>
             <div>
-              <p class="lead text-primary">Give me a call or email to schedule your photo shoot.</p>
+              <p class="lead text-primary">Give me a call or send me an email to schedule your photo shoot.</p>
             </div>
           </div>
           <div class="row">
-            <h3 class="text-center text-primary">Let's Get In Touch...</h3>
+            <br>
+            <br>
+            <br>
+            <h3 class="text-center text-primary">Get In Touch...</h3>
             <br>
             <div class="col-md-2 text-center">
               <i class="fa fa-3x fa-fw fa-phone text-primary"></i>
