--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                            	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                            	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                            	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-                            
-                            	  ga('create', 'UA-48280446-1', 'auto');
-                            	  ga('send', 'pageview');
+                                    	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                                    	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                                    	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+                                    
+                                    	  ga('create', 'UA-48280446-1', 'auto');
+                                    	  ga('send', 'pageview');
     </script>
   </head><body>
     <div class="navbar navbar-default navbar-fixed-top">
@@ -182,7 +182,7 @@
                 <h2 class="text-center">Contact</h2>
               </div>
               <div class="panel-body">
-                <form class="form-horizontal" role="form" ction="//formspree.io/INFO@januarysmith.com" method="POST">
+                <form class="form-horizontal" role="form" action="//formspree.io/INFO@januarysmith.com" method="POST">
                   <div class="form-group">
                     <div class="col-sm-2">
                       <label for="inputEmail3" class="control-label">Name</label>
@@ -212,7 +212,7 @@
                       <label for="inputPassword3" class="control-label">Message</label>
                     </div>
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" id="inputPassword3" placeholder="Message">
+                      <input type="text" class="form-control" id="inputPassword3" placeholder="I am interested in a Google virtual tour.">
                     </div>
                   </div>
                   <div class="form-group">
