--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                                                    	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                                                    	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                                                    	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-                                                    
-                                                    	  ga('create', 'UA-48280446-1', 'auto');
-                                                    	  ga('send', 'pageview');
+                                                            	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                                                            	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                                                            	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+                                                            
+                                                            	  ga('create', 'UA-48280446-1', 'auto');
+                                                            	  ga('send', 'pageview');
     </script>
   </head><body>
     <div class="navbar navbar-default navbar-fixed-top">
@@ -148,16 +148,7 @@
           <br>
           <div class="col-md-4">
             <img src="images/home/me.jpg" class="center-block img-responsive img-thumbnail">
-            <div class="row">
-              <div class="col-md-9">
-                <h2 class="text-center text-muted">January Smith</h2>
-                <p class="text-left text-muted">(210) 870-6991
-                  <br>
-                  <a href="MAILTO:january@januarysmith.com">january@januarysmith.com</a>
-                  <br>11942 Mission Trace
-                  <br>San Antonio, TX 78230</p>
-              </div>
-            </div>
+            <div class="row"></div>
           </div>
           <div class="col-md-8">
             <p class="lead text-primary">Google Street View virtual tours is all I do...
@@ -166,69 +157,81 @@
               high quality panoramic photography across Texas and the Southwest. &nbsp;With
               numerous photo shoots under my belt and over 30 years experience in software
               and web development I am ready to put your business on the map.</p>
-            <div>
-              <br>
-            </div>
-            <div>
-              <p class="lead text-primary">Give me a call or send me an email to schedule your photo shoot.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-3"></div>
-          <div class="col-md-6">
-            <div class="panel panel-primary">
-              <div class="panel-heading">
-                <h2 class="text-center">Contact</h2>
+            <p class="lead text-primary">Give me a call or send me an email to schedule your photo shoot.</p>
+            <div class="row">
+              <div class="col-md-2">
+                <br><img src="images/home/GBV.jpg" class="center-block img-responsive img-rounded">
               </div>
-              <div class="panel-body">
-                <form class="form-horizontal" role="form" action="//formspree.io/INFO@januarysmith.com" method="POST">
-                  <input type="text" name="_gotcha" style="display:none">
-                  <input type="hidden" name="_next" value="//januarysmith.com">
-                  <div class="form-group">
-                    <div class="col-sm-2">
-                      <label for="inputName" class="control-label">Name</label>
-                    </div>
-                    <div class="col-sm-10">
-                      <input type="text" class="form-control" id="inputName" placeholder="Name" name="name">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-sm-2">
-                      <label for="inputPhone" class="control-label">Phone</label>
-                    </div>
-                    <div class="col-sm-10">
-                      <input type="text" class="form-control" id="inputPhone" placeholder="Phone" name="_subject">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-sm-2">
-                      <label for="inputEmail" class="control-label">Email</label>
-                    </div>
-                    <div class="col-sm-10">
-                      <input type="email" class="form-control" id="inputEmail" placeholder="Email" name="_replyto">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-sm-2">
-                      <label for="inputMessage" class="control-label">Message</label>
-                    </div>
-                    <div class="col-sm-10">
-                      <input type="text" class="form-control" id="inputMessage" placeholder="I am interested in a Google virtual tour." name="message">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                      <button type="submit" class="btn btn-primary">Send</button>
-                    </div>
-                  </div>
-                </form>
+              <div class="col-md-10">
+                <h2 class="text-left text-muted">January Smith</h2>
+                <p class="text-left text-muted">(210) 870-6991
+                  <br>
+                  <a href="MAILTO:january@januarysmith.com">january@januarysmith.com</a>
+                  <br>11942 Mission Trace
+                  <br>San Antonio, TX 78230</p>
               </div>
-            </div>
           </div>
-          <div class="col-md-3"></div>
         </div>
       </div>
+    </div>
+    <div class="row">
+      <br>
+      <br>
+      <br>
+      <br>
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h2 class="text-center">Contact</h2>
+          </div>
+          <div class="panel-body">
+            <form class="form-horizontal" role="form" action="//formspree.io/INFO@januarysmith.com" method="POST">
+              <input type="text" name="_gotcha" style="display:none">
+              <input type="hidden" name="_next" value="//januarysmith.com">
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="inputName" class="control-label">Name</label>
+                </div>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="inputName" placeholder="Name" name="name">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="inputPhone" class="control-label">Phone</label>
+                </div>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="inputPhone" placeholder="Phone" name="_subject">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="inputEmail" class="control-label">Email</label>
+                </div>
+                <div class="col-sm-10">
+                  <input type="email" class="form-control" id="inputEmail" placeholder="Email" name="_replyto">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-2">
+                  <label for="inputMessage" class="control-label">Message</label>
+                </div>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="inputMessage" placeholder="I am interested in a Google virtual tour." name="message">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <button type="submit" class="btn btn-primary">Send</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3"></div>
+    </div>
     </div>
   
 
