--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                                                            	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                                                            	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                                                            	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-                                                            
-                                                            	  ga('create', 'UA-48280446-1', 'auto');
-                                                            	  ga('send', 'pageview');
+                                                                    	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                                                                    	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                                                                    	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+                                                                    
+                                                                    	  ga('create', 'UA-48280446-1', 'auto');
+                                                                    	  ga('send', 'pageview');
     </script>
   </head><body>
     <div class="navbar navbar-default navbar-fixed-top">
@@ -107,6 +107,11 @@
                 hour to shoot.</p>
             </div>
             <div class="col-md-12 text-center">
+              <br><br>
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9CLYaukFmMw" allowfullscreen=""></iframe>
+              </div>
+              <br>
               <h3 class="text-primary">Getting started is easy...</h3>
               <br>
               <div class="col-md-4 text-center">
@@ -160,7 +165,8 @@
             <p class="lead text-primary">Give me a call or send me an email to schedule your photo shoot.</p>
             <div class="row">
               <div class="col-md-2">
-                <br><img src="images/home/GBV.jpg" class="center-block img-responsive img-rounded">
+                <br>
+                <img src="images/home/GBV.jpg" class="center-block img-responsive img-rounded">
               </div>
               <div class="col-md-10">
                 <h2 class="text-left text-muted">January Smith</h2>
