Change About Wording

--- a/about/about.html
+++ b/about/about.html
@@ -90,7 +90,7 @@
               and Google Street View Virtual Tours is all I do...</p>
             <p class="text-primary">I have been a Google Trusted Photographer for over two years now shooting
               high quality panoramic photography across Texas and the Southwest. I enjoy
-              the challenge that comes with composing an image in a full 360 degrees
+              the challenge of composing an image in a full 360 degrees
               and the interactive results that can be experienced online.</p>
             <p class="text-primary">With numerous photo shoots under my belt and over 30 years experience
               in software and web development I am ready to put your business on the
