Add a few more county pictures and Alamo City Liquors

--- a/tours/tours.html
+++ b/tours/tours.html
@@ -189,6 +189,10 @@
                             					panoramaOptions.pano="5fJuBj5J-REAAAQWzI7wUw";
                             					break;
                             				
+                            					case "Alamo City Liquor":
+                            					panoramaOptions.pano="6ni33-DZbWgAAAQn7zMmVA";
+                            					break;                            				
+                            				
                             					case "Anytime Fitness (Copperas Cove)":
                             					panoramaOptions.pano="Y1An91S9jiwAAAQfDZMTTA";
                             					break;
@@ -403,6 +407,9 @@
                 </li>
                 <li>
                     <a href="#">Aladdin Carpets</a>
+                </li>
+                <li>
+                    <a href="#">Alamo City Liquor</a>
                 </li>
                 <li>
                     <a href="#">Alamo Heights Pet Clinic</a>
