--- a/stock/portfolio.html
+++ b/stock/portfolio.html
@@ -1,6 +1,6 @@
 <html><head>
-        <meta name="keywords" content="Google Trusted Photographer, Street View, Virtual Tour">
-        <meta name="description" content="This is the persoanl website of Google Street View Trusted Photographer January Smith - this page displays a gallery of my virtual tours.">
+        <meta name="keywords" content="Google Trusted Photographer, Street View, Virtual Tour, Stock Photography">
+        <meta name="description" content="This is the persoanl website of Google Street View Trusted Photographer January Smith - this page displays a gallery of my Stock Photography.">
         <title>January Smith - Google Street View Trusted Photographer</title>
         <link rel="icon" href="images/home/favicon.ico">
         <meta charset="utf-8">
