--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head>
-    <meta name="keywords" content="Google Trusted Photographer, Street View, Virtual Tour">
-    <meta name="description" content="This is the persoanl website of Google Street View Trusted Photographer January Smith.">
+    <meta name="keywords" content="Google Trusted Photographer, Street View, Virtual Tour, San Antonio, Texas">
+    <meta name="description" content="This is the personal website of Google Street View Trusted Photographer January Smith.">
     <title>January Smith - Google Street View Trusted Photographer</title>
     <link rel="icon" href="images/home/favicon.ico">
     <meta charset="utf-8">
