--- a/tours/tours.html
+++ b/tours/tours.html
@@ -240,6 +240,10 @@
                             					case "Greg Liquors":
                             						panoramaOptions.pano="rATG2tZNTW0AAAQfDpGjuQ";
                             					break;
+
+                            					case "Heavenly Floral Designs":
+                            						panoramaOptions.pano="tzD3Caye_D0AAAQo8ZL-lg";
+                            					break;
                              
                             					case "Irish Embassy Pub":
                             						panoramaOptions.pano="E2j3A7gI3uIAAAAGOt2O0w";
@@ -333,6 +337,10 @@
                             						panoramaOptions.pano="Nm0g8bk0qsAAAAQqfeeJ7w";
                             					break;
                             				   
+                            					case "Xpressions Florist":
+                            						panoramaOptions.pano="0JvML8_mn_UAAAQo8amSoQ";
+                            					break;
+
                             					case "Yummiberry Yogurt":
                             						panoramaOptions.pano="z7lGzsBJlVAAAAAGOo4dUA";
                             					break;
@@ -462,6 +470,9 @@
                     <a href="#">Greg Liquors</a>
                 </li>
                 <li>
+                    <a href="#">Heavenly Floral Designs</a>
+                </li>
+                <li>
                     <a href="#">Irish Embassy Pub</a>
                 </li>
                 <li>
@@ -529,6 +540,9 @@
                 </li>
                 <li>
                     <a href="#">W Dental</a>
+                </li>
+                <li>
+                    <a href="#">Xpressions Florist</a>
                 </li>
                 <li>
                     <a href="#">Yummiberry Yogurt</a>
