--- a/tours/tours.html
+++ b/tours/tours.html
@@ -233,6 +233,10 @@
                             						panoramaOptions.pano="3GGcgAi70doAAAGutXiSSA";
                             					break;
                               
+                             					case "Boba Sip":
+                            						panoramaOptions.pano="Ua-ZYoTJrf4AAAQzS_H88w";
+                            					break;
+
                              					case "Buddys Home Furnishings":
                             						panoramaOptions.pano="xT7C9_mSvkYAAAQo8i8LLw";
                             					break;
@@ -485,6 +489,9 @@
         </li>
         <li>
           <a href="#">Bec Dental Center</a>
+        </li>
+        <li>
+          <a href="#">Boba Sip</a>
         </li>
         <li>
           <a href="#">Buddys Home Furnishings</a>
