--- a/tours/tours.html
+++ b/tours/tours.html
@@ -292,6 +292,10 @@
                             					case "Re-Bath(Schertz)":
                             						panoramaOptions.pano="aDPpegoQLq0AAAQun3JKpg";
                             					break;
+
+                            					case "Rustic Gallery":
+                            						panoramaOptions.pano="MIvQErKabRIAAAQzTy9ueA";
+                            					break;
                             				   
                             					case "Sew Special":
                             						panoramaOptions.pano="ZwK9tfC2mbUAAAGu5veOcg";
@@ -534,6 +538,9 @@
         </li>
         <li>
           <a href="#">Re-Bath(Schertz)</a>
+        </li>
+        <li>
+          <a href="#">Rustic Gallery</a>
         </li>
         <li>
           <a href="#">Sew Special</a>
