add eraser clinic

--- a/tours/tours.html
+++ b/tours/tours.html
@@ -245,6 +245,10 @@
                             						panoramaOptions.pano="D76VCMWIRnUAAAQp2bIJ2w";
                             					break;
                             				   
+                            					case "Eraser Clinic Tattoo Removal":
+                            						panoramaOptions.pano="VOWJxZ7uQPUAAAQvOXfv3Q";
+                            					break;
+
                             					case "Futon Furniture Store":
                             						panoramaOptions.pano="Vv5NZl5pQCQAAAAGOwb0OQ";
                             					break;
@@ -499,6 +503,9 @@
         </li>
         <li>
           <a href="#">Buddys Home Furnishings</a>
+        </li>
+        <li>
+          <a href="#">Eraser Clinic Tattoo Removal</a>
         </li>
         <li>
           <a href="#">ExploreUSA</a>
