Add Frio Country
Add Frio Country Resort

--- a/tours/tours.html
+++ b/tours/tours.html
@@ -249,6 +249,10 @@
                             						panoramaOptions.pano="VOWJxZ7uQPUAAAQvOXfv3Q";
                             					break;
 
+                            					case "Frio Country Resort":
+                            						panoramaOptions.pano="O9rxMjIMX3MAAAQz45ucEw";
+                            					break;
+
                             					case "Futon Furniture Store":
                             						panoramaOptions.pano="Vv5NZl5pQCQAAAAGOwb0OQ";
                             					break;
@@ -509,6 +513,9 @@
         </li>
         <li>
           <a href="#">ExploreUSA</a>
+        </li>
+        <li>
+          <a href="#">Frio Country Resort</a>
         </li>
         <li>
           <a href="#">Futon Furniture Store</a>
