update about page
add G+ and LinkedIn and Google Trusted links

--- a/about/about.html
+++ b/about/about.html
@@ -75,6 +75,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <img src="../images/about/me.jpg" class="center-block img-responsive img-rounded">
+                        
                     </div>
                     <div class="col-md-4">
                         <h3 class="text-primary">January Smith</h3>
@@ -84,9 +85,14 @@
                             <i class="fa fa-fw fa-lg fa-phone"></i>(210) 870-6991</p>
                         <p class="text-primary">
                             <i class="fa fa-envelope fa-fw fa-lg"></i>
-                            <a href="">january@januarysmith.com</a>
+                            <a href="mailto:january@januarysmith.com">january@januarysmith.com</a>
                         </p>
-                        <img src="../images/about/TrustedProBadge_English_Landscape_P.png" class="img-responsive">
+						<a href="https://plus.google.com/+januarysmith"><img src="../images/about/GooglePlus.png" height="25" width="25">Google+</a> 
+						<br>  
+						<a href="https://www.linkedin.com/profile/view?id=AAkAAAGVHm8Bd9oNt32i5kOrc9uzhzpPhSpXJjY"><img src="../images/about/LinkedIn.png" height="25" width="25">LinkedIn</a> 
+                        <br>
+                        <a href="https://www.google.com/maps/streetview/trusted/"><img src="../images/about/TrustedProBadge_English_Landscape_P.png" height="100" width="200"></a>
+                        <br>
                     </div>
                     <div class="col-md-4">
                         <p class="text-primary">I am a panoramic photographer based in my home town of San Antonio, Texas
