--- a/tours/tours.html
+++ b/tours/tours.html
@@ -241,6 +241,10 @@
                             						panoramaOptions.pano="xT7C9_mSvkYAAAQo8i8LLw";
                             					break;
 
+                             					case "Dr Robert Heinrich DDS":
+                            						panoramaOptions.pano="FIENVsE_8Q8AAAQ0IuJaOA";
+                            					break;
+
                             					case "ExploreUSA":
                             						panoramaOptions.pano="D76VCMWIRnUAAAQp2bIJ2w";
                             					break;
@@ -507,6 +511,9 @@
         </li>
         <li>
           <a href="#">Buddys Home Furnishings</a>
+        </li>
+        <li>
+          <a href="#">Dr Robert Heinrich DDS</a>
         </li>
         <li>
           <a href="#">Eraser Clinic Tattoo Removal</a>
