application software developer

--- a/about/about.html
+++ b/about/about.html
@@ -71,7 +71,7 @@
                 <br>
             </div>
             <div class="col-md-4">
-                <p class="text-primary">I am a panoramic photographer and developer based in my home town of San Antonio, Texas.</p>
+                <p class="text-primary">I am a panoramic photographer and application software developer based in my home town of San Antonio, Texas.</p>
                 <p class="text-primary">I have been shooting high quality panoramic images around the world for over two years now as a Google Trusted Photographer. I enjoy the challenge of composing an image in a full 360 degrees and the interactive
                     results that can be experienced online.</p>
                 <p class="text-primary">With numerous photo shoots under my belt and over 30 years experience
