--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta name="keywords" content="Google Trusted Photographer, Street View, Virtual Tour, San Antonio, Texas">
     <meta name="description" content="This is the personal website of Google Street View Trusted Photographer January Smith.">
-    <title>January Smith - Google Street View Trusted Photographer</title>
+    <title>January Smith</title>
     <link rel="icon" href="images/home/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
