--- a/about/about.html
+++ b/about/about.html
@@ -2,7 +2,7 @@
 <head>
     <meta name="keywords" content="Google Trusted Photographer, Street View, Virtual Tour, San Antonio, Texas">
     <meta name="description" content="This is the personal website of Google Street View Trusted Photographer January Smith.">
-    <title>January Smith - Google Street View Trusted Photographer - About</title>
+    <title>January Smith - About</title>
     <link rel="icon" href="../images/home/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
@@ -67,18 +67,14 @@
                 <br>  
                 <a href="https://www.linkedin.com/profile/view?id=AAkAAAGVHm8Bd9oNt32i5kOrc9uzhzpPhSpXJjY"><img src="../images/about/LinkedIn.png" height="25" width="25">LinkedIn</a> 
                 <br>
-                <a href="https://www.google.com/maps/streetview/trusted/"><img src="../images/about/TrustedProBadge_English_Landscape_P.png" height="100" width="200"></a>
                 <br>
             </div>
             <div class="col-md-4">
                 <p class="text-primary">I am a panoramic photographer and application software developer based in my home town of San Antonio, Texas.</p>
-                <p class="text-primary">I have been shooting high quality panoramic images around the world for over two years now as a Google Trusted Photographer. I enjoy the challenge of composing an image in a full 360 degrees and the interactive
+                <p class="text-primary">I have been shooting high quality panoramic images around the world for over two years now.  I enjoy the challenge of composing an image in a full 360 degrees and the interactive
                     results that can be experienced online.</p>
-                <p class="text-primary">With numerous photo shoots under my belt and over 30 years experience
-                    in software and web development I am ready to put your business on the
-                    map - Google Maps...</p>
-                <p class="text-primary">Give me a call, send me an email, or use the contact form below to schedule
-                    your photo shoot.</p>
+                
+                <p class="text-primary">Give me a call, send me an email, or use the contact form below to get in touch.</p>
             </div>
         </div>
     </div>
@@ -128,7 +124,7 @@
                             <label for="inputMessage" class="control-label">Message</label>
                         </div>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputMessage" placeholder="I am interested in a Google virtual tour." name="message">
+                            <input type="text" class="form-control" id="inputMessage" placeholder="Message..." name="message">
                         </div>
                     </div>
                     <div class="form-group">
