Modify Google Virtual Tour on Home Page
change to show Mission San Jose, show links, and autopilot between panos

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 // Set User Preferences
                 //
                 //================================================================
-                var upPanoID = randomPanos[Math.floor((Math.random() * 10))]; 
+                var upPanoID = "UQiOsNn5YTMAAAQpe5pnqg"
                 var upHeading = 0;
                 var upPitch = 0;
                 var upZoomLevel = 0;
@@ -46,12 +46,12 @@
                 var upEnableAddress = false;
                 var upEnablePan = false;
                 var upEnableZoom = false;
-                var upEnableLinks = false;
+                var upEnableLinks = true;
                 var upEnableClickToGo = false;
                 var upEnableScrollWheel = false;
                 var upEnableClickToDisableAutoRotate = true;
                 var upEnableShowLinksAfterDisableAutoRotate = true;
-                var upEnableAutoPilot = false;
+                var upEnableAutoPilot = true;
          
                 //================================================================
                 //
