--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>January Smith - Photographer/Developer</title>
+        <meta name="description" content="This is the personal website of panoramic photographer and application software developer January Smith.">
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <link rel="icon" href="img/home/favicon.ico">
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -40,7 +40,7 @@
                             <a  href="#portfolio">Portfolio</a>
                         </li>
                          <li>
-                            <a href="#about">About</a>
+                            <a href="about/about.html">About</a>
                         </li>
                     </ul>
                 </div>
