Misc Cosmetic Updates
New icon, modify bootstrap col and offset

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>January Smith - Photographer/Developer</title>
         <meta name="description" content="This is the personal website of panoramic photographer and application software developer January Smith.">
+        <meta name="keywords" content="HTML,CSS,XML,JavaScript,panorama,stock,photography">
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <link rel="icon" href="img/home/favicon.ico">
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -26,7 +27,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand page-scroll" href="#home">
+                    <a class="navbar-brand page-scroll" href="#">
                         January Smith
                     </a>
                 </div>
@@ -34,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="hidden">
-                            <a href="#home"></a>
+                            <a href="#"></a>
                         </li>
                         <li>
                             <a  href="#portfolio">Portfolio</a>
