--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         // set parameters for the viewer:
         viewer.setVars({
-          pano: "img/home/riverwalk_",
+          pano: "img/home/sanJosePano_",
           format: "14faces",
           pan: 120,
           minpan: -180,
