Add Texas Courthouse Tours page

--- a/about/about.html
+++ b/about/about.html
@@ -41,6 +41,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="../blog/blog.html">Pic of the Day</a></li>
                             <li><a href="http://www.istockphoto.com/portfolio/01smith">Stock Photos</a></li>
+                            <li><a href="../courthouse/Texas-Courthouse-Tours.html">Texas Courthouse Tours</a></li>
                         </ul>
                     </li>
 
@@ -53,7 +54,9 @@
         </div>
         <!-- /.container -->
     </nav>
-
+<!-- ===============================
+        Content
+     =============================== -->        
     <article>
         <section>
             <div class="container">
@@ -155,7 +158,6 @@
     <script src="../js/vendor/jquery-1.12.1.min.js"></script>
     <script src="../js/plugins.js"></script>
     <script src="../js/vendor/bootstrap.min.js"></script>
-    <script src="../js/main.js"></script>
 <!-- Google Analytics: -->
     <script>
         (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
